<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">众里</string>
    
        <!-- 底部菜单 -->
	<string name="bottom_menu_home">首页</string>
	<string name="bottom_menu_center">我</string>
	
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_ok">确定</string>
    <string name="button_refresh">刷新</string>
     
	<!-- 自定义对话框 -->
	<string name="loading_data">正在加载数据...</string>
	
		<!-- Map related -->
	<string name="map_scenic_spots">景点</string>
	<string name="map_scenic_restaurants">餐馆</string>
	<string name="map_scenic_hotels">酒店</string>
	<string name="navigation_map">地图</string>
	<string name="navigation_nav">导航</string>
	
	<!-- Account related -->
	<string name="account_submit">提交</string>
	<string name="account_register">注册</string>
	<string name="account_name">用户名称:</string>
	<string name="account_friend">关注:</string>
	<string name="account_add_friend">添加</string>
	<string name="account_edit_friend">修改</string>
	<string name="account_change_password">修改密码</string>
	<string name="account_logout">退出登录</string>
	<string name="account_login">登录</string>
	<string name="account_change_password_origant">原密码：</string>
	<string name="account_change_password_origant_hint">请输入原密码</string>
	<string name="account_change_password_new">新密码：</string>
	<string name="account_change_password_new_hint">请输入新密码</string>
	<string name="account_change_password_confirm">确认密码：</string>
	<string name="account_change_password_confirm_hint">请再次确认</string>
	<string name="account_change_password_ok">提交</string>
	<string name="account_newp_password_confirm_error">两次输入的新密码不一致</string>
	<string name="account_password_is_not_validate">输入的密码格式不正确</string>
	<string name="account_password_hint">请输入密码</string>
	<string name="account_confirm_password_hint">请输入确认密码</string>
	<string name="account_password_changed_successfully">修改成功</string>
	<string name="account_name_hint">请输入您的帐户名</string>
	<string name="account_register_mobile_error">请输入正确的手机号</string>
	<string name="account_register_verifycode_error">请输入验证码</string>
	<string name="account_register_password_error">请输入密码</string>
	<string name="account_register_confirmpassword_error">请输入确认密码</string>
	<string name="account_register_confirmpassword_notunique">两次输入的密码不匹配</string>
	<string name="account_register_name_hint">请输入手机号</string>
	<string name="account_register_net_error">网络异常,注册失败</string>
	<string name="account_register_success">注册成功</string>
	<string name="account_register_fail">注册失败</string>
	<string name="account_login_fail">登录失败</string>
	<string name="account_login_net_error">网络异常,登录失败</string>
	<string name="account_change_password_net_error">网络异常,修改密码失败</string>
	<string name="account_prompt_register">还没有账号？ 请点击这里</string>
	<string name="account_fast_register">快速注册></string>
	<string name="account_forget_password">忘记密码</string>
	<string name="account_register_next_step">下一步</string>
	<string name="account_register_submit">提交注册</string>
	<string name="register_step1">输入手机号</string>
	<string name="register_step2">输入验证码</string>
	<string name="register_step3">设置密码</string>
	<string name="account_register_verifycode_hint">请输入验证码</string>
	<string name="get_verifycode">获取</string>
	<string name="get_verifycode_prompt">获取(%1$s)</string>
	<string name="account_getback_verifycode_title">验证码</string>
	<string name="account_getback_verifycode_hint">请输入验证码</string>
	<string name="account_getback_newpassword_title">新密码</string>
	<string name="account_getback_newpassword_hint">请设置新密码</string>
	<string name="account_getback_newpassword_again_title">确认密码</string>
	<string name="account_getback_newpassword_again_hint">请再次输入</string>
	<string name="account_getback_password">找回密码</string>
	<string name="account_getback_password_ok">找回密码成功</string>

</resources>
