<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<include layout="@layout/title_layout"/>
	
	<TextView android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_red"
        android:visibility="gone" />
	    
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dip"
		android:layout_margin="8dip"
		android:padding="8dip"
		android:background="@drawable/rectangle_background"
		android:orientation="vertical" >
		
	    <LinearLayout android:layout_width="match_parent"
			android:layout_height="@dimen/title_height"
			android:gravity="center_vertical" >
            
			<TextView android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="3"
				android:text="@string/account_change_password_origant"
				android:textColor="@color/text_color_black"
				android:textSize="16sp"/>
            
			<EditText android:id="@+id/password"
			    android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="7"
				android:background="@null"
				android:hint="@string/account_change_password_origant_hint"
				android:textColor="@color/text_color_grey"
				android:textCursorDrawable="@null"
				android:inputType="textPassword"
				android:textSize="16sp" />
		</LinearLayout>
		
	    <include layout="@layout/line_seperator"/>
	    
	    <LinearLayout android:layout_width="match_parent"
			android:layout_height="@dimen/title_height"
			android:gravity="center_vertical" >
            
			<TextView android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="3"
				android:text="@string/account_change_password_new"
				android:textColor="@color/text_color_black"
				android:textSize="16sp"/>
            
			<EditText android:id="@+id/new_password"
			    android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="7"
				android:background="@null"
				android:hint="@string/account_change_password_new_hint"
				android:textColor="@color/text_color_grey"
				android:textCursorDrawable="@null"
				android:inputType="textPassword"
				android:textSize="16sp" />
		</LinearLayout>
		
	    <include layout="@layout/line_seperator"/>
		
	    <LinearLayout android:layout_width="match_parent"
			android:layout_height="@dimen/title_height"
			android:gravity="center_vertical" >
            
			<TextView android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="3"
				android:text="@string/account_change_password_confirm"
				android:textColor="@color/text_color_black"
				android:textSize="16sp"/>
            
			<EditText android:id="@+id/confirm_password"
			    android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="7"
				android:background="@null"
				android:hint="@string/account_change_password_confirm_hint"
				android:textColor="@color/text_color_grey"
				android:textCursorDrawable="@null"
				android:inputType="textPassword"
				android:textSize="16sp" />
		</LinearLayout>
		
	</LinearLayout>

	<Button
		android:id="@+id/btn_change_password"
		android:layout_height="@dimen/list_item_height"
		android:layout_width="match_parent"
		android:layout_margin="8dip"
		android:text="@string/account_change_password_ok"
		android:textColor="@color/white"
		android:onClick="change_password"
		style="@style/button_blue_style" />
     
</LinearLayout>