<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/windown_background"
    android:orientation="vertical" >

    <include layout="@layout/title_layout" />

    <LinearLayout android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dip"
        android:background="@drawable/round_rectangle_background_white"
        android:orientation="vertical">
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
		        android:id="@+id/phone_editor"
		        android:layout_width="0dp"
		        android:layout_height="@dimen/title_height"
		        android:layout_weight="6"
		        android:paddingLeft="8dp"
		        android:digits="0123456789"
		        android:drawableLeft="@drawable/ic_account_name"
		        android:drawablePadding="4dip"
		        android:hint="@string/account_register_name_hint"
		        android:inputType="phone"
		        android:maxLength="11"
		        android:textColor="@color/text_color_black"
		        android:textSize="14sp"
		        android:background="@null"
		        android:textCursorDrawable="@null" />
            
        </LinearLayout>
        
        <include layout="@layout/line_seperator"/>
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="8dp"
                android:text="@string/account_getback_verifycode_title"
                android:textColor="@color/text_color_black"
                android:textSize="18sp"/>
            
            <EditText
		        android:id="@+id/verifycode_editor"
		        android:layout_width="0dp"
		        android:layout_height="@dimen/title_height"
		        android:layout_weight="4"
		        android:digits="0123456789"
		        android:inputType="number"
		        android:hint="@string/account_register_verifycode_hint"
		        android:textColor="@color/text_color_black"
		        android:textSize="14sp"
		        android:background="@null"
		        android:textCursorDrawable="@null" />
            
            <Button android:id="@+id/get_verifycode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_margin="4dp"
                android:text="@string/get_verifycode"
                android:background="@drawable/btn_background"/>
        </LinearLayout>
        
        <include layout="@layout/line_seperator"/>
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="8dp"
                android:text="@string/account_getback_newpassword_title"
                android:textColor="@color/text_color_black"
                android:textSize="18sp"/>
            
            <EditText
		        android:id="@+id/password_editor"
		        android:layout_width="0dp"
		        android:layout_height="@dimen/title_height"
		        android:layout_weight="7"
		        android:hint="@string/account_password_hint"
		        android:inputType="textPassword"
		        android:textColor="@color/text_color_black"
		        android:textSize="14sp"
		        android:background="@null"
		        android:textCursorDrawable="@null" />
            
        </LinearLayout>
        
        <include layout="@layout/line_seperator"/>
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="8dp"
                android:text="@string/account_getback_newpassword_again_title"
                android:textColor="@color/text_color_black"
                android:textSize="18sp"/>
            
            <EditText
		        android:id="@+id/confirm_password_editor"
		        android:layout_width="0dp"
		        android:layout_height="@dimen/title_height"
		        android:layout_weight="7"
		        android:hint="@string/account_confirm_password_hint"
		        android:inputType="textPassword"
		        android:textColor="@color/text_color_black"
		        android:textSize="14sp"
		        android:background="@null"
		        android:textCursorDrawable="@null" />

        </LinearLayout>
    </LinearLayout>
     
    <Button
       android:id="@+id/btn_register"
       style="@style/button_blue_style"
       android:layout_width="match_parent"
       android:layout_height="@dimen/list_item_height"
       android:layout_margin="8dip"
       android:onClick="register"
       android:text="@string/account_register" />
     
</LinearLayout>