<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/account_verified"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dip" >
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >

        <LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dip"
			android:padding="8dip"
			android:background="@drawable/round_rectangle_background"
			android:orientation="vertical" >
         
            <!-- 用户名称 -->
			<LinearLayout android:layout_width="match_parent"
				android:layout_height="@dimen/title_height"
				android:gravity="center_vertical"  >
				
				<TextView android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="3"
					android:text="@string/account_name"
					android:textColor="@color/text_color_black"
					android:textSize="16sp"/>
             
				<TextView android:id="@+id/account_name"
				    android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="7"
					android:textColor="@color/text_color_grey"
					android:textSize="16sp"/>
			</LinearLayout>
			
			<include layout="@layout/line_seperator"/>
			
			<!-- Friend -->
			<LinearLayout android:layout_width="match_parent"
				android:layout_height="@dimen/title_height"
				android:gravity="center_vertical"  >
				
				<TextView android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="3"
					android:text="@string/account_friend"
					android:textColor="@color/text_color_black"
					android:textSize="16sp"/>
             
				<EditText android:id="@+id/account_friend"
				    android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="4"
					android:textColor="@color/text_color_grey"
					android:textSize="16sp"/>
				<Button
	        		android:layout_width="0dp"
	        		android:layout_height="@dimen/list_item_height"
	        		android:onClick="addRoster"
	       		 	android:text="@string/account_add_friend"
	       		 	android:textSize="16sp"
	       		 	android:layout_weight="3"
	        		style="@style/button_blue_style" />
				
				<ProgressBar android:id="@+id/account_friend_progress"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    style="?android:progressBarStyleSmall"
				    android:visibility="gone" />
			</LinearLayout>
			
		</LinearLayout>

	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/list_item_height"
	        android:onClick="onClickLogout"
	        android:text="@string/account_logout"
	        style="@style/button_red_style" />

	</LinearLayout>

</ScrollView>
