<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/title_layout"/>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="@dimen/top_tabbar_height"
        android:background="#FFFFFFFF" >
        
        <LinearLayout android:id="@+id/tab_left"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center">
                
                <ImageView android:id="@+id/tab_img"
                    android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:src="@drawable/map_scenic_spots_bkg"/>
                
	            <TextView android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:layout_toRightOf="@+id/tab_img"
	                android:text="@string/map_scenic_spots"
	                style="@style/top_tabbar_text_style"/>
            </LinearLayout>
            
            <ImageView android:layout_width="match_parent"
        	    android:layout_height="1dip"
        	    android:background="@drawable/strip_background"/>
        </LinearLayout>
        
        <include layout="@layout/vertical_line"/>
        
        <LinearLayout android:id="@+id/tab_center"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center">
                
                <ImageView
                    android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:src="@drawable/map_scenic_restaurants_bkg"/>
                
	            <TextView android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/map_scenic_restaurants"
	                style="@style/top_tabbar_text_style"/>
            </LinearLayout>
            
            <ImageView android:layout_width="match_parent"
        	    android:layout_height="1dip"
        	    android:background="@drawable/strip_background"/>
        </LinearLayout>
        
        <include layout="@layout/vertical_line"/>
        
        <LinearLayout android:id="@+id/tab_right"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center">
                
                <ImageView
                    android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:src="@drawable/map_scenic_hotels_bkg"/>
                
	            <TextView android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/map_scenic_hotels"
	                style="@style/top_tabbar_text_style"/>
            </LinearLayout>
            
            <ImageView android:layout_width="match_parent"
        	    android:layout_height="1dip"
        	    android:background="@drawable/strip_background"/>
        </LinearLayout>
    </LinearLayout>
    
    <com.baidu.mapapi.map.MapView
            android:id="@+id/bmapsView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true" />
    
</LinearLayout>